New forms and templates for company and restaurant

--- a/ayb/ayb/costos/templates/costos/company_create.html
+++ b/ayb/ayb/costos/templates/costos/company_create.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {%load static %}
 {% block meta_desc %} A&B Cost {% endblock %}
-{% block title %} A&B Cost - Provider {% endblock %}
+{% block title %} A&B Cost - Company {% endblock %}
 {%block content %}
  <form method="post">
     {% csrf_token %}
@@ -10,4 +10,3 @@
     <button type="submit">Submit</button>
   </form>
 {% endblock %}}
-
