--- a/ayb/ayb/costos/templates/costos/prouser_create.html
+++ b/ayb/ayb/costos/templates/costos/prouser_create.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {%load static %}
 {% block meta_desc %} A&B Cost {% endblock %}
-{% block title %} A&B Cost - Provider {% endblock %}
+{% block title %} A&B Cost - ProUser {% endblock %}
 {%block content %}
  <form method="post">
     {% csrf_token %}
