--- a/ayb/ayb/costos/templates/costos/company_create.html
+++ b/ayb/ayb/costos/templates/costos/company_create.html
@@ -1,12 +1,13 @@
 {% extends 'costos/base.html' %}
 {% load i18n %}
 {%load static %}
+{% load crispy_forms_tags %}
 {% block meta_desc %} A&B Cost {% endblock %}
 {% block title %} A&B Cost - Company {% endblock %}
 {%block content %}
  <form method="post">
     {% csrf_token %}
-    <table>{{ form.as_table }}</table>
+    <table>{{ form | crispy }}</table>
     <button type="submit">Submit</button>
   </form>
 {% endblock %}}
