--- a/ayb/ayb/costos/templates/costos/provider.html
+++ b/ayb/ayb/costos/templates/costos/provider.html
@@ -1,14 +1,14 @@
 {% extends 'costos/base.html' %}
 {% load i18n %}
 {%load static %}
+{% load crispy_forms_tags %}
 {% block meta_desc %} A&B Cost {% endblock %}
 {% block title %} A&B Cost - Provider {% endblock %}
 {%block content %}
  <form method="post">
     {% csrf_token %}
-    <table>{{ form.as_table }}</table>
+    <table>{{ form.as_table|crispy }}</table>
     <button type="submit">Sign in</button>
   </form>
 {% endblock %}}
 
-{% extends 'base.html' %}
