--- a/templates/costos/base.html
+++ b/templates/costos/base.html
@@ -43,7 +43,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="/dashboard/">
+                <a class="nav-link" href="{% url 'dashboard' %}">
                     <i class="fas fa-chart-line"></i>
                     <span>Dashboard</span></a>
             </li>
