--- a/templates/costos/login.html
+++ b/templates/costos/login.html
@@ -48,7 +48,7 @@
                                     </form>
                                     <hr>
                                     <div class="text-center">
-                                        <a class="small" href="{% url 'forgot-password' %}">Forgot Password?</a>
+                                        <a class="small" href="{% url 'forgot_password' %}">Forgot Password?</a>
                                     </div>
                                     <div class="text-center">
                                         <a class="small" href="register.html">Create an Account!</a>
