--- a/templates/costos/provider_create.html
+++ b/templates/costos/provider_create.html
@@ -6,7 +6,7 @@
 {% block title %} A&B Cost - Provider {% endblock %}
 {%block content %}
   <div class="text-center">
-   <h1 class="h4 text-gray-900 mb-4">Add Provider</h1>
+ <h1 class="h3 mb-0 text-gray-800">Add Provider</h1>
  </div>
  <body class="bg-gradient-primary">
   <div class="container">
