--- a/templates/costos/base.html
+++ b/templates/costos/base.html
@@ -306,8 +306,6 @@
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{ user.username|default:'Guest'}}</span>
-                                <img class="img-profile rounded-circle"
-                                    src="img/undraw_profile.svg">
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -379,7 +377,7 @@
                 <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
+                    <a class="btn btn-primary" href="{% url 'login' %}">Logout</a>
                 </div>
             </div>
         </div>
@@ -395,12 +393,7 @@
     <!-- Custom scripts for all pages-->
     <script src="{% static 'vendor/js/sb-admin-2.min.js' %}"></script>
 
-    <!-- Page level plugins -->
-    <script src="{% static 'vendor/chart.js/Chart.min.js' %}"></script>
 
-    <!-- Page level custom scripts -->
-    <script src="{% static 'vendor/js/demo/chart-area-demo.js' %} "></script>
-    <script src="{% static 'vendor/js/demo/chart-pie-demo.js' %}"></script>
 
 </body>
 
