--- a/templates/costos/receta_create.html
+++ b/templates/costos/receta_create.html
@@ -5,7 +5,7 @@
 {% block meta_desc %} A&B Cost {% endblock %}
 {% block title %} A&B Cost - Receta Create {% endblock %}
 {%block content %}
-<div class="text-center"><h1 class="h4 text-gray-900 mb-4">Add Receta</h1>
+<div class="text-center"><h1 class="h3 mb-0 text-gray-800">Add Receta</h1>
  </div>
  <body class="bg-gradient-primary">
   <div class="container">
