--- a/templates/django_registration/registration_form.html
+++ b/templates/django_registration/registration_form.html
@@ -1,71 +1,18 @@
 {% extends 'costos/base.html' %}
 {% load i18n %}
 {%load static %}
+{% load crispy_forms_tags %}
 {% block meta_desc %} A&B Cost {% endblock %}
 {% block title %} A&B Cost - Register {% endblock %}
 {%block content %}
-<body class="bg-gradient-primary">
-    <div class="container">
-        <div class="card o-hidden border-0 shadow-lg my-5">
-            <div class="card-body p-0">
-                <!-- Nested Row within Card Body -->
-                <div class="row">
-                    <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
-                    <div class="col-lg-7">
-                        <div class="p-5">
-                            <div class="text-center">
-                                <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
-                            </div>
-                            <form class="RegistrationForm" method="POST">
-                                {% csrf_token %}
-                                <div class="form-group row">
-                                    <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <input type="text" class="form-control form-control-user" id="FirstName" name="first_name"
-                                            placeholder="First Name">
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <input type="text" class="form-control form-control-user" id="LastName" name="last_name"
-                                            placeholder="Last Name">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                     <input type="text" class="form-control form-control-user" id="username" name="username"
-                                        placeholder="Username">
-
-                                    <input type="email" class="form-control form-control-user" id="InputEmail" name="email"
-                                        placeholder="Email Address">
-                                </div>
-                                <div class="form-group row">
-                                    <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <input type="password" class="form-control form-control-user"
-                                            id="InputPassword" name="password1"  placeholder="Password">
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <input type="password" class="form-control form-control-user"
-                                            id="RepeatPassword" name="password2" placeholder="Repeat Password">
-                                    </div>
-                                </div>
-                                <button type='submit' class="btn btn-primary btn-user btn-block">
-                                    Register Account
-                                </button>
-
-                            </form>
-                            <hr>
-                            <div class="text-center">
-                                <a class="small" href="{% url 'forgot_password' %}">Forgot Password?</a>
-                            </div>
-                            <div class="text-center">
-                                <a class="small" href="{% url 'login' %}">Already have an account? Login!</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-
-
-</body>
-
+<!--Register-->
+<div class="container py-5">
+	<h1>Register</h1>
+	<form method="POST">
+		{% csrf_token %}
+		{{ RegistrationForm | crispy }}
+		<button class="btn btn-primary" type="submit">Register</button>
+	</form>
+	<p class="text-center">If you already have an account, <a href="{% url 'login' %}">login</a> instead.</p>
+</div>
 {% endblock %}}
