latest updates for first working draft

--- a/templates/costos/base.html
+++ b/templates/costos/base.html
@@ -330,8 +330,8 @@
                 <!-- End of Topbar -->
 
 
-            </div>
-            <!-- End of Main Content -->
+<!--            </div>-->
+<!--            &lt;!&ndash; End of Main Content &ndash;&gt;-->
             {% block content %}
 
 
