--- a/templates/costos/provider_create.html
+++ b/templates/costos/provider_create.html
@@ -18,7 +18,9 @@
              <form method="post" >
                 {% csrf_token %}
                 <table>{{ form | crispy}}</table>
-                <button type="submit">Submit</button>
+                 <button class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" type="submit">
+                        <span aria-hidden="true">Submit</span>
+                 </button>
              </form>
             </div>
          </div>
