--- a/templates/costos/register.html
+++ b/templates/costos/register.html
@@ -1,6 +1,7 @@
 {% extends 'costos/base.html' %}
 {% load i18n %}
 {%load static %}
+{% load crispy_forms_tags %}
 {% block meta_desc %} A&B Cost {% endblock %}
 {% block title %} A&B Cost - Register {% endblock %}
 {%block content %}
@@ -16,40 +17,14 @@
                             <div class="text-center">
                                 <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
                             </div>
-                            <form class="RegistrationForm" method="POST">
-                                {% csrf_token %}
-                                <div class="form-group row">
-                                    <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <input type="text" class="form-control form-control-user" id="FirstName" name="first_name"
-                                            placeholder="First Name">
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <input type="text" class="form-control form-control-user" id="LastName" name="last_name"
-                                            placeholder="Last Name">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                     <input type="text" class="form-control form-control-user" id="username" name="username"
-                                        placeholder="Username">
+                            <!--Register-->
+                        	<form method="POST">
+		                    {% csrf_token %}
+		                    {{ register_form|crispy }}
+		                    <button class="btn btn-primary" type="submit">Register</button>
+	                        </form>
 
-                                    <input type="email" class="form-control form-control-user" id="InputEmail" name="email"
-                                        placeholder="Email Address">
-                                </div>
-                                <div class="form-group row">
-                                    <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <input type="password" class="form-control form-control-user"
-                                            id="InputPassword" name="password1"  placeholder="Password">
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <input type="password" class="form-control form-control-user"
-                                            id="RepeatPassword" name="password2" placeholder="Repeat Password">
-                                    </div>
-                                </div>
-                                <button type='submit' class="btn btn-primary btn-user btn-block">
-                                    Register Account
-                                </button>
 
-                            </form>
                             <hr>
                             <div class="text-center">
                                 <a class="small" href="{% url 'forgot_password' %}">Forgot Password?</a>
