--- a/templates/costos/restaurant_list.html
+++ b/templates/costos/restaurant_list.html
@@ -2,11 +2,11 @@
 {% load i18n %}
 {%load static %}
 {% block meta_desc %} A&B Cost {% endblock %}
-{% block title %} A&B Cost - Ingredientes {% endblock %}
+{% block title %} A&B Cost - Restaurantes {% endblock %}
 {%block content %}
-<h2>All Resturant </h2>
+<h2>All Restaurants </h2>
   <div class="row">
-	  {% for object in object_list %}
+ {% for object in object_list %}
    <div class="col-xl-3 col-md-6 mb-4">
   		<div class="card border-left-primary shadow h-100 py-2">
 			<div class="card-body">
