--- a/templates/django_registration/login.html
+++ b/templates/django_registration/login.html
@@ -33,7 +33,7 @@
                                         <a class="small" href="{% url 'forgot_password' %}">Forgot Password?</a>
                                     </div>
                                     <div class="text-center">
-                                        <a class="small" href="{% url 'register' %}">Create an Account!</a>
+                                        <a class="small" href="register.html">Create an Account!</a>
                                     </div>
                                 </div>
                             </div>
