--- a/templates/django_registration/registration_form.html
+++ b/templates/django_registration/registration_form.html
@@ -7,7 +7,7 @@
 {%block content %}
 <!--Register-->
 <div class="container py-5">
-	<h1>Register</h1>
+	<h1>Sign up</h1>
 	<form method="POST">
 		{% csrf_token %}
 		{{ RegistrationForm | crispy }}
