--- a/templates/costos/provider_list.html
+++ b/templates/costos/provider_list.html
@@ -2,9 +2,9 @@
 {% load i18n %}
 {%load static %}
 {% block meta_desc %} A&B Cost {% endblock %}
-{% block title %} A&B Cost - Provider {% endblock %}
+{% block title %} A&B Cost - Proveedores {% endblock %}
 {%block content %}
-<h2>All Provider </h2>
+<h2>Proveedores </h2>
   <div class="row">
 {% for object in object_list %}
    <div class="col-xl-3 col-md-6 mb-4">
