--- a/templates/costos/base.html
+++ b/templates/costos/base.html
@@ -66,7 +66,7 @@
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">New</h6>
-                        <a class="collapse-item" href="{% url 'receta_create' %}">Receta</a>
+                        <a class="collapse-item" href="{% url 'AddRecetaView' %}">Receta</a>
                         <a class="collapse-item" href="{% url 'ingredient_create' %}">Ingredient</a>
                         <a class="collapse-item" href="{% url 'provider_create' %}">Provider</a>
                     </div>
