--- a/templates/costos/company_create.html
+++ b/templates/costos/company_create.html
@@ -3,9 +3,9 @@
 {%load static %}
 {% load crispy_forms_tags %}
 {% block meta_desc %} A&B Cost {% endblock %}
-{% block title %} A&B Cost - Company {% endblock %}
+{% block title %} A&B Cost - Compañia Nueva {% endblock %}
 {%block content %}
-<div class="text-center"><h1 class="h3 mb-0 text-gray-800">Add Company</h1>
+<div class="text-center"><h1 class="h3 mb-0 text-gray-800">Nueva Compañia</h1>
  </div>
  <body class="bg-gradient-primary">
   <div class="container">
@@ -27,12 +27,5 @@
      </div>
    </div>
   </div>
-  <!-- Bootstrap core JavaScript-->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <!-- Core plugin JavaScript-->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-  <!-- Custom scripts for all pages-->
-  <script src="js/sb-admin-2.min.js"></script>
  </body>
 {% endblock %}}
