--- a/templates/costos/home.html
+++ b/templates/costos/home.html
@@ -7,4 +7,24 @@
 {%block content %}
 <div class="text-center"><h1 class="h3 mb-0 text-gray-800">Home</h1>
  </div>
+h1>{% translate "name" %}</h1>
+   <p>{% translate "description" %}</p>
+    {% get_current_language as CURRENT_LANGUAGE %}
+      {% get_available_languages as AVAILABLE_LANGUAGES %}
+      {% get_language_info_list for AVAILABLE_LANGUAGES as languages %}
+      <div class="languages">
+        <p>{% translate "Language" %}:</p>
+        <ul class="languages">
+          {% for language in languages %}
+            <li>
+              <a href="/{{ language.code }}/"
+                {% if language.code == CURRENT_LANGUAGE %} class="active"{% endif %}>
+                {{ language.name_local }}
+              </a>
+            </li>
+          {% endfor %}
+        </ul>
+      </div>
+
+
 {% endblock %}}
