--- a/templates/costos/ingredient_list.html
+++ b/templates/costos/ingredient_list.html
@@ -4,7 +4,12 @@
 {% block meta_desc %} A&B Cost {% endblock %}
 {% block title %} A&B Cost - Ingredientes {% endblock %}
 {%block content %}
-<h2>All Ingredients </h2>
+  <!-- Page Heading -->
+   <div class="d-sm-flex align-items-center justify-content-between mb-4">
+       <h1 class="h3 mb-0 text-gray-800">{% trans "Ingredientes" %}</h1>
+       <a href="{% url 'ingredient_create' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+              {% trans "Nuevo Ingrediente" %}</a>
+   </div>
   <div class="row">
 	  {% for object in object_list %}
    <div class="col-xl-3 col-md-6 mb-4">
