--- a/templates/costos/receta_create.html
+++ b/templates/costos/receta_create.html
@@ -3,9 +3,9 @@
 {%load static %}
 {% load crispy_forms_tags %}
 {% block meta_desc %} A&B Cost {% endblock %}
-{% block title %} A&B Cost - Receta Create {% endblock %}
+{% block title %} A&B Cost - Receta Nueva {% endblock %}
 {%block content %}
-<div class="text-center"><h1 class="h3 mb-0 text-gray-800">Add Receta</h1>
+<div class="text-center"><h1 class="h3 mb-0 text-gray-800">Nueva Receta</h1>
  </div>
  <body class="bg-gradient-primary">
   <div class="container">
@@ -16,7 +16,7 @@
            <div class="form-group">
              <form method="post" >
                 {% csrf_token %}
-                <table>{{ form | crispy}}</table>
+                <table>{{ form | crispy }}</table>
                 <button class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" type="submit">
                         <span aria-hidden="true">Submit</span>
                 </button>
@@ -27,13 +27,6 @@
      </div>
    </div>
   </div>
-  <!-- Bootstrap core JavaScript-->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <!-- Core plugin JavaScript-->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-  <!-- Custom scripts for all pages-->
-  <script src="js/sb-admin-2.min.js"></script>
  </body>
 {% endblock %}}
 
