--- a/templates/costos/receta_list.html
+++ b/templates/costos/receta_list.html
@@ -4,8 +4,8 @@
 {% block meta_desc %} A&B Cost {% endblock %}
 {% block title %} A&B Cost - Receta {% endblock %}
 {%block content %}
-<h2>All Recetas </h2>
-  <div class="row">
+<h2>Recetas </h2>
+<div class="row">
 {% for object in object_list %}
    <div class="col-xl-3 col-md-6 mb-4">
   		<div class="card border-left-primary shadow h-100 py-2">
