--- a/templates/costos/restaurant_list.html
+++ b/templates/costos/restaurant_list.html
@@ -4,7 +4,7 @@
 {% block meta_desc %} A&B Cost {% endblock %}
 {% block title %} A&B Cost - Restaurantes {% endblock %}
 {%block content %}
-<h2>All Restaurants </h2>
+<h2>Restaurantes </h2>
   <div class="row">
  {% for object in object_list %}
    <div class="col-xl-3 col-md-6 mb-4">
