--- a/templates/costos/provider_list.html
+++ b/templates/costos/provider_list.html
@@ -2,25 +2,37 @@
 {% load i18n %}
 {%load static %}
 {% block meta_desc %} A&B Cost {% endblock %}
-{% block title %} A&B Cost - Proveedores {% endblock %}
+{% block title %} A&B Cost - Providers New {% endblock %}
 {%block content %}
-<h2>Proveedores </h2>
+ <!-- Page Heading -->
+   <div class="d-sm-flex align-items-center justify-content-between mb-4">
+       <h1 class="h3 mb-0 text-gray-800">{% trans "Providers" %}</h1>
+       <a href="{% url 'provider_create' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+              {% trans "+ Provider" %}</a>
+   </div>
+{% if provider_list %}
   <div class="row">
-{% for object in object_list %}
-   <div class="col-xl-3 col-md-6 mb-4">
-  		<div class="card border-left-primary shadow h-100 py-2">
-			<div class="card-body">
-				<div class="row no-gutters align-items-center">
-					<div class="col mr-2">
-						<div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-						{{object.name}}</div>
-						<div class="h5 mb-0 font-weight-bold text-gray-800">{{ object.id }} {{ object.description }}</div>
+	{% for provider in provider_list %}
+   		<div class="col-xl-3 col-md-6 mb-4">
+  			<div class="card border-left-primary shadow h-100 py-2">
+				<div class="card-body">
+					<div class="row no-gutters align-items-center">
+						<div class="col mr-2">
+							<div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+								{{provider.description}}</div>
+							<div class="h5 mb-0 font-weight-bold text-gray-800">
+								<a class="text-rest" href="{% url 'provider_detail' provider.id %}">{{ provider.name }}</a>
+							</div>
                        </div>
                    </div>
-			</div>
+				</div>
            </div>
-   </div>
-{% endfor %}
+   		</div>
+	{% endfor %}
  </div>
 
+{% else %}
+<p/>No Providers found </p>
+
+{% endif %}
 {% endblock %}}
