--- a/templates/costos/receta_list.html
+++ b/templates/costos/receta_list.html
@@ -4,23 +4,35 @@
 {% block meta_desc %} A&B Cost {% endblock %}
 {% block title %} A&B Cost - Receta {% endblock %}
 {%block content %}
-<h2>Recetas </h2>
-<div class="row">
-{% for object in object_list %}
-   <div class="col-xl-3 col-md-6 mb-4">
-  		<div class="card border-left-primary shadow h-100 py-2">
-			<div class="card-body">
-				<div class="row no-gutters align-items-center">
-					<div class="col mr-2">
-						<div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-						{{object.name}}</div>
-						<div class="h5 mb-0 font-weight-bold text-gray-800">{{ object.id }} {{ object.description }}</div>
+ <!-- Page Heading -->
+   <div class="d-sm-flex align-items-center justify-content-between mb-4">
+       <h1 class="h3 mb-0 text-gray-800">{% trans "Receta" %}</h1>
+       <a href="{% url 'add_receta' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+              {% trans "+ Receta" %}</a>
+   </div>
+{% if receta_list %}
+  <div class="row">
+	{% for receta in receta_list %}
+   		<div class="col-xl-3 col-md-6 mb-4">
+  			<div class="card border-left-primary shadow h-100 py-2">
+				<div class="card-body">
+					<div class="row no-gutters align-items-center">
+						<div class="col mr-2">
+							<div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+								{{receta.description}}</div>
+							<div class="h5 mb-0 font-weight-bold text-gray-800">
+								<a class="text-rest" href="{% url 'receta_detail' receta.id %}">{{receta.id}} {{ receta.name }} </a>
+							</div>
                        </div>
                    </div>
-			</div>
+				</div>
            </div>
-   </div>
-{% endfor %}
+   		</div>
+	{% endfor %}
  </div>
 
+{% else %}
+<p/>No Recetas found </p>
+
+{% endif %}
 {% endblock %}}
