--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 {% block meta_desc %} A&B Cost {% endblock %}
 {% block title %} A&B Cost - Company {% endblock %}
 {%block content %}
-<div class="text-center"><h1 class="h3 mb-0 text-gray-800">COST Home Class View</h1>
+<div class="text-center"><h1 class="h3 mb-0 text-gray-800">Home Class View</h1>
  </div>
 <h1>{% translate "name" %}</h1>
    <p>{% translate "description" %}</p>
