--- a/templates/costos/base.html
+++ b/templates/costos/base.html
@@ -31,7 +31,7 @@
         <ul class="navbar-nav bg-gradient-dark sidebar sidebar-dark accordion"  id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'index' %}">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
                    <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-utensils"></i>
                 </div>
@@ -51,8 +51,22 @@
             <!-- Divider -->
             <hr class="sidebar-divider">
 
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'RecetaViewList' %}">
+                    <i class="fas fa-calculator"></i>
+                    <span>Recetas</span></a>
+            </li>
 
-            <!-- Heading -->
+
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'IngredientViewList' %}">
+                     <i class="fas fa-book"></i>
+                    <span>Ingredients</span></a>
+            </li>
+             <!-- Divider -->
+            <hr class="sidebar-divider">
+
+            <!-- H8eading -->
             <div class="sidebar-heading">
                 Activities
             </div>
@@ -66,20 +80,13 @@
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">New</h6>
-                        <a class="collapse-item" href="{% url 'AddRecetaView' %}">Receta</a>
+                        <a class="collapse-item" href="{% url 'add_receta' %}">Receta</a>
                         <a class="collapse-item" href="{% url 'ingredient_create' %}">Ingredient</a>
                     </div>
                 </div>
             </li>
 
-            <!-- Nav Item - Dashboard -->
-            <li class="nav-item active">
-                <a class="nav-link" href="#">
-                    <i class="fas fa-calculator"></i>
-                    <span>Costs</span></a>
-            </li>
-
-               <!-- Divider -->
+              <!-- Divider -->
             <hr class="sidebar-divider">
 
             <!-- Heading -->
@@ -92,7 +99,7 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
                     aria-expanded="true" aria-controls="collapseUtilities">
                     <i class="fas fa-tools"></i>
-                    <span>Profile</span>
+                    <span>Config</span>
                 </a>
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
@@ -102,25 +109,6 @@
                         <a class="collapse-item" href="{% url 'provider_create' %}">Provider</a>
                     </div>
                 </div>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'register' %}">
-                    <i class="fas fa-user-plus"></i>
-                    <span>Sign Up</span></a>
-            </li>
-
-
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %}">
-                    <i class="fas fa-sign-in-alt"></i>
-                    <span>Login</span></a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'forgot_password' %}">
-                    <i class="fas fa-unlock-alt"></i>
-                    <span>Forgot Password</span></a>
             </li>
 
         </ul>
