--- a/templates/costos/ingredient_list.html
+++ b/templates/costos/ingredient_list.html
@@ -4,29 +4,35 @@
 {% block meta_desc %} A&B Cost {% endblock %}
 {% block title %} A&B Cost - Ingredientes {% endblock %}
 {%block content %}
-  <!-- Page Heading -->
+ <!-- Page Heading -->
    <div class="d-sm-flex align-items-center justify-content-between mb-4">
-       <h1 class="h3 mb-0 text-gray-800">{% trans "Ingredientes" %}</h1>
+       <h1 class="h3 mb-0 text-gray-800">{% trans "Ingredients" %}</h1>
        <a href="{% url 'ingredient_create' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
-              {% trans "Nuevo Ingrediente" %}</a>
+              {% trans "+ Ingredient" %}</a>
    </div>
+{% if ingredient_list %}
   <div class="row">
-	  {% for object in object_list %}
-   <div class="col-xl-3 col-md-6 mb-4">
-  		<div class="card border-left-primary shadow h-100 py-2">
-			<div class="card-body">
-				<div class="row no-gutters align-items-center">
-					<div class="col mr-2">
-						<div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-						{{object.description}}</div>
-						<div class="h5 mb-0 font-weight-bold text-gray-800">{{ object.name }} {{ object.price }}</div>
+	{% for ingredient in ingredient_list %}
+   		<div class="col-xl-3 col-md-6 mb-4">
+  			<div class="card border-left-primary shadow h-100 py-2">
+				<div class="card-body">
+					<div class="row no-gutters align-items-center">
+						<div class="col mr-2">
+							<div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+								{{ingredient.description}}</div>
+							<div class="h5 mb-0 font-weight-bold text-gray-800">
+								<a class="text-rest" href="{% url 'ingredient_detail' ingredient.id %}">{{ ingredient.id }} {{ ingredient.name }}</a>
+							</div>
                        </div>
                    </div>
-			</div>
+				</div>
            </div>
-   </div>
-{% endfor %}
+   		</div>
+	{% endfor %}
  </div>
 
-{% endblock %}}
+{% else %}
+<p/>No Ingredients found </p>
 
+{% endif %}
+{% endblock %}}
