--- a/templates/costos/restaurant_create.html
+++ b/templates/costos/restaurant_create.html
@@ -5,7 +5,7 @@
 {% block meta_desc %} A&B Cost {% endblock %}
 {% block title %} A&B Cost - Restaurante Nuevo {% endblock %}
 {%block content %}
-<div class="text-center"><h1 class="h3 mb-0 text-gray-800">Nuevo Restaurante</h1>
+<div class="text-center"><h1 class="h3 mb-0 text-gray-800">New Restaurant</h1>
  </div>
  <body class="bg-gradient-primary">
   <div class="container">
