Build Receta Steps Update first draft

--- a/templates/costos/base.html
+++ b/templates/costos/base.html
@@ -105,8 +105,8 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Configuration:</h6>
-                        <a class="collapse-item" href="{% url 'restaurant_create' %}">Restaurant</a>
-                        <a class="collapse-item" href="{% url 'provider_create' %}">Provider</a>
+                        <a class="collapse-item" href="{% url 'restaurant_list' %}">Restaurants</a>
+                        <a class="collapse-item" href="{% url 'provider_list' %}">Providers</a>
                     </div>
                 </div>
             </li>
