--- a/templates/costos/provider_list.html
+++ b/templates/costos/provider_list.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {%load static %}
 {% block meta_desc %} A&B Cost {% endblock %}
-{% block title %} A&B Cost - Providers New {% endblock %}
+{% block title %} A&B Cost - Providers {% endblock %}
 {%block content %}
  <!-- Page Heading -->
    <div class="d-sm-flex align-items-center justify-content-between mb-4">
