--- a/templates/costos/receta_create.html
+++ b/templates/costos/receta_create.html
@@ -28,7 +28,7 @@
                                 {% endfor %}
                                 <p class="pt-2">
                                     <button type="submit" class="btn btn-primary w-100 mb-2">Add Receta</button>
-                                    <a href="{% url 'home' %}" role="button" class="btn btn-secondary w-100">Cancel</a>
+                                    <a href="{% url 'RecetaViewList' %}" role="button" class="btn btn-secondary w-100">Cancel</a>
                                 </p>
                             </form>
                         </div>
