--- a/templates/costos/provider_create.html
+++ b/templates/costos/provider_create.html
@@ -3,47 +3,39 @@
 {%load static %}
 {% load crispy_forms_tags %}
 {% block meta_desc %} A&B Cost {% endblock %}
-{% block title %} A&B Cost - Provider Nuevo {% endblock %}
+{% block title %} A&B Cost - New Provider {% endblock %}
 {%block content %}
+<div class="text-center"><h1 class="h3 mb-0 text-gray-800">New Provider</h1>
+ </div>
  <body class="bg-gradient-primary">
-  <div class="container">
-   <div class="row justify-content-center">
-     <div class="col-xl-10 col-lg-12 col-md-9">
-       <div class="card o-hidden border-0 shadow-lg my-5">
-         <div class="card-body p-3">
-              <ul class="nav nav-tabs" id="myTab" role="tablist">
-                <li class="nav-item waves-effect waves-light">
-                    <a class="nav-link" id="ingredient-tab" data-toggle="tab" href="{% url 'ingredient_create' %}" role="tab" aria-controls="ingredient" aria-selected="false">Ingrediente</a>
-                </li>
-                <li class="nav-item waves-effect waves-light">
-                    <a class="nav-link active" id="provider-tab" data-toggle="tab" href="#" role="tab" aria-controls="provider" aria-selected="true">Proveedor</a>
-                </li>
-                <li class="nav-item waves-effect waves-light">
-                   <a class="nav-link " id="receta-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="receta" aria-selected="false">Receta</a>
-                </li>
-             </ul>
-             <div class="tab-content" id="MyTabs">
-                 <div class="tab-pane fade show active" id="provider" role="tabpanel" aria-labelledby="provider-tab">
-                     <br>
-                     <div class="row">
-                         <div class="col">
-                             <form method="post" >
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-xl-10 col-lg-12 col-md-9">
+                <div class="card o-hidden border-0 shadow-lg my-5">
+                    <div class="card-body p-3">
+                        <div class="form-group">
+                            <form action="" method="POST">
+                                {% for hidden_field in form.hidden_fields %}
+                                    {{hidden_field.errors }}
+                                    {{ hidden_field }}
+                                {% endfor %}
+
                                 {% csrf_token %}
-                                {{ form | crispy }}
-                                <button class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" type="submit">
-                                    <span aria-hidden="true">Submit</span>
-                                </button>
+                                {{ form.non_form_errors }}
+                                {% for field in form %}
+                                    {{ field.errors }}
+                                    {{ field.label_tag }} {{field }}
+                                {% endfor %}
+                                <p class="pt-2">
+                                    <button type="submit" class="btn btn-primary w-100 mb-2">Add Provider</button>
+                                    <a href="{% url 'provider_list' %}" role="button" class="btn btn-secondary w-100">Cancel</a>
+                                </p>
                             </form>
-                         </div>
-                     </div>
-                 </div>
-
-             </div>
-
-         </div>
-       </div>
-     </div>
-   </div>
-  </div>
-</body>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+ </body>
 {% endblock %}}
