--- a/templates/costos/receta_detail.html
+++ b/templates/costos/receta_detail.html
@@ -15,10 +15,10 @@
 <h2>{{ receta.id }} {{ receta.name}}</h2>
 <hr>
     {% for items in receta.items.all %}
-         <p>{{items.id}} </p>
+         <p>{{items.id}} {{ items.qty }} {{ items.error }}</p>
     {% endfor %}
 <p>
-    <a href="{% url 'receta_steps_edit' pk=receta.pk %}" role="button" class="btn btn-primary w-100 mb-2">Edit Steps</a>
+    <a href="{% url 'receta_steps_update' pk=receta.pk  %}" role="button" class="btn btn-primary w-100 mb-2">Edit Steps</a>
     <a href="{% url 'RecetaViewList' %}" role="button" class="btn btn-secundary w-100">Recetas</a>
 </p>
 {% endblock %}}
